@@ -1,3 +1,8 @@
+2012-03-29  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* src/org/eclipse/cdt/autotools/tests/ProjectTools.java (build): Refresh the workspace root so resource tests
+	will work consistently.
+
 2012-01-03  Jeff Johnston  <jjohnstn@redhat.com>
 
 	Refactor to org.eclipse.cdt.autotools.tests.
